syntax = "proto3";

package opendut.model.viper;

import "opendut/model/util/uuid.proto";
import "opendut/model/viper/source.proto";
import "opendut/viper/rt/test_suite.proto";


message ViperRunDescriptor {
  ViperRunId id = 1;
  ViperRunName name = 2;
  opendut.model.viper.ViperSourceId source = 3;
  opendut.viper.rt.test_suite.ViperTestSuiteIdentifier suite = 4;
  repeated ViperRunParameter parameters = 5;
}

message ViperRunId {
  opendut.model.util.Uuid uuid = 1;
}

message ViperRunName {
  string value = 1;
}

message ViperRunParameter {
  string key = 1;
  ViperRunParameterValue value = 2;
}

message ViperRunParameterValue {
  oneof kind {
    bool boolean = 1;
    int64 number = 2;
    string text = 3;
  }
}
